# set-effort-analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
data/analysis/: monday_and_toggl_task_analysis.parquet.dvc
data/monday.com/: .gitignore  account_10368903_data_1661961547.zip.dvc  datadbmi-set-monday-acct-project-tasks.parquet.dvc  dbmi-set-monday-acct-project-tasks.parquet.dvc
data/toggl.com/: .gitignore  DB-Toggl_Track_summary_report_2022-01-01_2022-12-31.csv.dvc  DB-Toggl_Track_summary_report_2023-01-01_2023-04-16.csv.dvc  DB-Toggl_Track_summary_report_2023-01-01_2023-12-31.csv.dvc
set_effort_analysis/: data_exploration_monday.ipynb  data_exploration_toggl.ipynb  data_exploration_toggl_api.ipynb  eda_combined_monday_and_toggl.ipynb  eda_monday_and_toggl_join.ipynb  exploration.ipynb
